Chore: execution changes

--- a/notebooks/entity_recognition.ipynb
+++ b/notebooks/entity_recognition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,21 +19,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting en-core-web-trf==3.2.0\n",
+      "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.2.0/en_core_web_trf-3.2.0-py3-none-any.whl (460.2 MB)\n",
+      "     |████████████████████████████████| 460.2 MB 87 kB/s              \n",
+      "\u001b[?25hRequirement already satisfied: spacy<3.3.0,>=3.2.0 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from en-core-web-trf==3.2.0) (3.2.0)\n",
+      "Requirement already satisfied: spacy-transformers<1.2.0,>=1.1.2 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from en-core-web-trf==3.2.0) (1.1.2)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from spacy<3.3.0,>=3.2.0->en-core-web-trf==3.2.0) (2.26.0)\n",
+      "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from spacy<3.3.0,>=3.2.0->en-core-web-trf==3.2.0) (4.62.3)\n",
+      "Requirement already satisfied: packaging>=20.0 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from spacy<3.3.0,>=3.2.0->en-core-web-trf==3.2.0) (21.3)\n",
+      "Requirement already satisfied: langcodes<4.0.0,>=3.2.0 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from spacy<3.3.0,>=3.2.0->en-core-web-trf==3.2.0) (3.3.0)\n",
+      "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from spacy<3.3.0,>=3.2.0->en-core-web-trf==3.2.0) (1.0.6)\n",
+      "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.8 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from spacy<3.3.0,>=3.2.0->en-core-web-trf==3.2.0) (3.0.8)\n",
+      "Requirement already satisfied: srsly<3.0.0,>=2.4.1 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from spacy<3.3.0,>=3.2.0->en-core-web-trf==3.2.0) (2.4.2)\n",
+      "Requirement already satisfied: blis<0.8.0,>=0.4.0 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from spacy<3.3.0,>=3.2.0->en-core-web-trf==3.2.0) (0.7.5)\n",
+      "Requirement already satisfied: pathy>=0.3.5 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from spacy<3.3.0,>=3.2.0->en-core-web-trf==3.2.0) (0.6.1)\n",
+      "Requirement already satisfied: typer<0.5.0,>=0.3.0 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from spacy<3.3.0,>=3.2.0->en-core-web-trf==3.2.0) (0.4.0)\n",
+      "Requirement already satisfied: setuptools in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from spacy<3.3.0,>=3.2.0->en-core-web-trf==3.2.0) (59.5.0)\n",
+      "Requirement already satisfied: catalogue<2.1.0,>=2.0.6 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from spacy<3.3.0,>=3.2.0->en-core-web-trf==3.2.0) (2.0.6)\n",
+      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from spacy<3.3.0,>=3.2.0->en-core-web-trf==3.2.0) (2.0.6)\n",
+      "Requirement already satisfied: numpy>=1.15.0 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from spacy<3.3.0,>=3.2.0->en-core-web-trf==3.2.0) (1.21.4)\n",
+      "Requirement already satisfied: wasabi<1.1.0,>=0.8.1 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from spacy<3.3.0,>=3.2.0->en-core-web-trf==3.2.0) (0.8.2)\n",
+      "Requirement already satisfied: pydantic!=1.8,!=1.8.1,<1.9.0,>=1.7.4 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from spacy<3.3.0,>=3.2.0->en-core-web-trf==3.2.0) (1.8.2)\n",
+      "Requirement already satisfied: jinja2 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from spacy<3.3.0,>=3.2.0->en-core-web-trf==3.2.0) (3.0.3)\n",
+      "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from spacy<3.3.0,>=3.2.0->en-core-web-trf==3.2.0) (1.0.1)\n",
+      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from spacy<3.3.0,>=3.2.0->en-core-web-trf==3.2.0) (3.0.6)\n",
+      "Requirement already satisfied: thinc<8.1.0,>=8.0.12 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from spacy<3.3.0,>=3.2.0->en-core-web-trf==3.2.0) (8.0.13)\n",
+      "Requirement already satisfied: transformers<4.12.0,>=3.4.0 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from spacy-transformers<1.2.0,>=1.1.2->en-core-web-trf==3.2.0) (4.11.3)\n",
+      "Requirement already satisfied: spacy-alignments<1.0.0,>=0.7.2 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from spacy-transformers<1.2.0,>=1.1.2->en-core-web-trf==3.2.0) (0.8.4)\n",
+      "Requirement already satisfied: torch>=1.6.0 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from spacy-transformers<1.2.0,>=1.1.2->en-core-web-trf==3.2.0) (1.10.0)\n",
+      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from packaging>=20.0->spacy<3.3.0,>=3.2.0->en-core-web-trf==3.2.0) (3.0.6)\n",
+      "Requirement already satisfied: smart-open<6.0.0,>=5.0.0 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from pathy>=0.3.5->spacy<3.3.0,>=3.2.0->en-core-web-trf==3.2.0) (5.2.1)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from pydantic!=1.8,!=1.8.1,<1.9.0,>=1.7.4->spacy<3.3.0,>=3.2.0->en-core-web-trf==3.2.0) (4.0.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from requests<3.0.0,>=2.13.0->spacy<3.3.0,>=3.2.0->en-core-web-trf==3.2.0) (3.3)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from requests<3.0.0,>=2.13.0->spacy<3.3.0,>=3.2.0->en-core-web-trf==3.2.0) (2021.10.8)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from requests<3.0.0,>=2.13.0->spacy<3.3.0,>=3.2.0->en-core-web-trf==3.2.0) (1.26.7)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from requests<3.0.0,>=2.13.0->spacy<3.3.0,>=3.2.0->en-core-web-trf==3.2.0) (2.0.8)\n",
+      "Requirement already satisfied: huggingface-hub>=0.0.17 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from transformers<4.12.0,>=3.4.0->spacy-transformers<1.2.0,>=1.1.2->en-core-web-trf==3.2.0) (0.1.2)\n",
+      "Requirement already satisfied: filelock in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from transformers<4.12.0,>=3.4.0->spacy-transformers<1.2.0,>=1.1.2->en-core-web-trf==3.2.0) (3.4.0)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from transformers<4.12.0,>=3.4.0->spacy-transformers<1.2.0,>=1.1.2->en-core-web-trf==3.2.0) (2021.11.10)\n",
+      "Requirement already satisfied: sacremoses in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from transformers<4.12.0,>=3.4.0->spacy-transformers<1.2.0,>=1.1.2->en-core-web-trf==3.2.0) (0.0.46)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from transformers<4.12.0,>=3.4.0->spacy-transformers<1.2.0,>=1.1.2->en-core-web-trf==3.2.0) (6.0)\n",
+      "Requirement already satisfied: tokenizers<0.11,>=0.10.1 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from transformers<4.12.0,>=3.4.0->spacy-transformers<1.2.0,>=1.1.2->en-core-web-trf==3.2.0) (0.10.3)\n",
+      "Requirement already satisfied: click<9.0.0,>=7.1.1 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from typer<0.5.0,>=0.3.0->spacy<3.3.0,>=3.2.0->en-core-web-trf==3.2.0) (8.0.3)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from jinja2->spacy<3.3.0,>=3.2.0->en-core-web-trf==3.2.0) (2.0.1)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: joblib in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from sacremoses->transformers<4.12.0,>=3.4.0->spacy-transformers<1.2.0,>=1.1.2->en-core-web-trf==3.2.0) (1.1.0)\n",
+      "Requirement already satisfied: six in /home/aumaron/Desktop/nlp/nlp_playground/nlp_env/lib/python3.9/site-packages (from sacremoses->transformers<4.12.0,>=3.4.0->spacy-transformers<1.2.0,>=1.1.2->en-core-web-trf==3.2.0) (1.16.0)\n",
+      "Installing collected packages: en-core-web-trf\n",
+      "Successfully installed en-core-web-trf-3.2.0\n",
+      "\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
+      "You can now load the package via spacy.load('en_core_web_trf')\n"
+     ]
+    }
+   ],
    "source": [
+    "# !python -m spacy download en_core_web_trf\n",
     "nlp = spacy.load(\"en_core_web_trf\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "glove_file = datapath('/home/aum/Desktop/projects/nlp/models/glove.6B.100d.txt')\n",
-    "# glove_file = datapath('/home/aumaron/Desktop/nlp/nlp_playground/models/glove.6B/glove.6B.100d.txt')\n",
+    "# glove_file = datapath('/home/aum/Desktop/projects/nlp/models/glove.6B.100d.txt')\n",
+    "glove_file = datapath('/home/aumaron/Desktop/nlp/nlp_playground/models/glove.6B/glove.6B.100d.txt')\n",
     "word2vec_glove_file = get_tmpfile(\"glove.6B.100d.word2vec.txt\")\n",
     "glove2word2vec(glove_file, word2vec_glove_file)\n",
     "\n",
@@ -42,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +114,7 @@
        "100"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,17 +226,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "70.2 µs ± 381 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# %%timeit\n",
     "\n",
@@ -192,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -232,13 +287,20 @@
     "# corpus_array = construct_corpus_matrix(intermediate_corpus, model)\n",
     "# corpus_array.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3.9.1 64-bit ('nlp_env': venv)",
    "language": "python",
-   "name": "python391jvsc74a57bd03502c2d8a44f1d370a9f7e349ee408832b67c21c31bd8924b7b4cde15de44893"
+   "name": "python391jvsc74a57bd03d2a12883df202f51a08e1f757b345e71b08bf7c8dc91b1538c0cba0bebac7b3"
   },
   "language_info": {
    "codemirror_mode": {
