Update: challenges and next steps updated

--- a/notebooks/entity_recognition.ipynb
+++ b/notebooks/entity_recognition.ipynb
@@ -36,25 +36,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_30379/1039543407.py:8: DeprecationWarning: Call to deprecated `glove2word2vec` (KeyedVectors.load_word2vec_format(.., binary=False, no_header=True) loads GLoVE text vectors.).\n",
-      "  glove2word2vec(glove_file, word2vec_glove_file)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load spacy language model\n",
     "nlp = spacy.load(\"en_core_web_trf\")\n",
     "\n",
     "# Load the GloVe embeddings\n",
-    "glove_file = datapath('/home/aum/Desktop/projects/nlp/models/glove.6B.100d.txt')\n",
-    "# glove_file = datapath('/home/aumaron/Desktop/nlp/nlp_playground/models/glove.6B/glove.6B.100d.txt')\n",
+    "# glove_file = datapath('/home/aum/Desktop/projects/nlp/models/glove.6B.100d.txt')\n",
+    "glove_file = datapath('/home/aumaron/Desktop/nlp/nlp_playground/models/glove.6B/glove.6B.100d.txt')\n",
     "word2vec_glove_file = get_tmpfile(\"glove.6B.100d.word2vec.txt\")\n",
     "glove2word2vec(glove_file, word2vec_glove_file)\n",
     "\n",
@@ -63,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -74,7 +65,7 @@
        "100"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,35 +315,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %%timeit"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "units -> NOUN\n",
-      "in -> ADP\n",
-      "inventory -> NOUN\n",
-      "Model NER ->  []\n",
-      "Search in Corpus ->  [{'actual_word': 'units', 'entity': ['Sales'], 'closest_root': 'supply', 'word_id': 0, 'confidence': [0.5354936262980426]}, {'actual_word': 'in', 'entity': ['Location'], 'closest_root': 'place', 'word_id': 1, 'confidence': [0.7434392096144258]}, {'actual_word': 'inventory', 'entity': ['Sales', 'Product'], 'closest_root:': 'inventory', 'word_id': 2, 'confidence': [1.0, 1.0]}]\n"
+      "125 µs ± 1.87 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "\n",
+    "corpus_array = construct_corpus_matrix(intermediate_corpus, model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_30379/1396784973.py:84: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  cos_theta = a.dot(b.T)/(np.sqrt(np.sum(np.square(a)))*(np.sqrt(np.sum(np.square(b)))))\n"
+      "employee -> NOUN\n",
+      "in -> ADP\n",
+      "organisation -> NOUN\n",
+      "Model NER ->  []\n",
+      "Search in Corpus ->  [{'actual_word': 'employee', 'entity': ['Person'], 'closest_root:': 'employee', 'word_id': 0, 'confidence': [1.0]}, {'actual_word': 'in', 'entity': ['Location'], 'closest_root': 'place', 'word_id': 1, 'confidence': [0.7434392096144258]}, {'actual_word': 'organisation', 'entity': ['Organisation'], 'closest_root:': 'organisation', 'word_id': 2, 'confidence': [1.0]}]\n"
      ]
     }
    ],
@@ -364,7 +357,7 @@
     "entity_from_old_method = []\n",
     "entity_from_model_list = []\n",
     "entity_from_search = []\n",
-    "for column_name in [\"units in inventory\"]:  # entity_data[\"column_names\"].values:\n",
+    "for column_name in [\"employee in organisation\"]:  # entity_data[\"column_names\"].values:\n",
     "    old_entity_list = [\n",
     "        word_obj[\"entity\"] for word_obj in list(filter(lambda corpus: corpus.get(\"name\") == column_name, old_entity_corpus))\n",
     "    ]\n",
@@ -472,75 +465,6 @@
     "\n",
     "# # corpus_array = construct_corpus_matrix(intermediate_corpus, model)\n",
     "# # corpus_array.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('nation', 0.8758761882781982),\n",
-       " ('now', 0.7629706263542175),\n",
-       " ('well', 0.746636688709259),\n",
-       " ('countries', 0.7459027171134949),\n",
-       " ('world', 0.7444546818733215),\n",
-       " ('states', 0.7400078773498535),\n",
-       " ('has', 0.7369707822799683),\n",
-       " ('government', 0.73195481300354),\n",
-       " ('already', 0.7283994555473328),\n",
-       " ('most', 0.7282326221466064),\n",
-       " ('part', 0.7277618646621704),\n",
-       " ('still', 0.7275569438934326),\n",
-       " ('today', 0.7264338731765747),\n",
-       " ('united', 0.726360023021698),\n",
-       " ('all', 0.7252687811851501),\n",
-       " ('over', 0.7178832292556763),\n",
-       " ('this', 0.7172205448150635),\n",
-       " ('europe', 0.7167598009109497),\n",
-       " ('the', 0.7163448333740234),\n",
-       " ('people', 0.7160573601722717),\n",
-       " ('and', 0.7149220108985901),\n",
-       " ('america', 0.7145408987998962),\n",
-       " ('since', 0.7144755721092224),\n",
-       " ('it', 0.7130166888237),\n",
-       " ('region', 0.7127728462219238),\n",
-       " ('once', 0.7126500606536865),\n",
-       " ('one', 0.7116884589195251),\n",
-       " ('in', 0.7093125581741333),\n",
-       " ('here', 0.7091266512870789),\n",
-       " ('but', 0.7043055891990662),\n",
-       " ('years', 0.7039714455604553),\n",
-       " ('even', 0.7038114070892334),\n",
-       " ('only', 0.7038098573684692),\n",
-       " ('far', 0.7030112147331238),\n",
-       " ('nations', 0.7016267776489258),\n",
-       " ('among', 0.7013375759124756),\n",
-       " ('as', 0.7008084654808044),\n",
-       " ('because', 0.7000370025634766),\n",
-       " ('is', 0.6985384225845337),\n",
-       " ('been', 0.6981486678123474),\n",
-       " ('especially', 0.697928249835968),\n",
-       " ('not', 0.6977711915969849),\n",
-       " ('more', 0.6971189379692078),\n",
-       " ('would', 0.6951038837432861),\n",
-       " ('many', 0.6949200630187988),\n",
-       " ('way', 0.694879412651062),\n",
-       " ('decades', 0.6944616436958313),\n",
-       " ('rest', 0.6930471658706665),\n",
-       " ('so', 0.6919248700141907),\n",
-       " ('despite', 0.6915313005447388)]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.similar_by_word(\"country\", topn=50)"
    ]
   },
   {
@@ -670,7 +594,7 @@
   "kernelspec": {
    "display_name": "Python 3.9.1 64-bit ('nlp_env': venv)",
    "language": "python",
-   "name": "python391jvsc74a57bd03502c2d8a44f1d370a9f7e349ee408832b67c21c31bd8924b7b4cde15de44893"
+   "name": "python391jvsc74a57bd03d2a12883df202f51a08e1f757b345e71b08bf7c8dc91b1538c0cba0bebac7b3"
   },
   "language_info": {
    "codemirror_mode": {
